# adam_pro_tasks

./: .gitignore  AGENTS.md  README.md  pyproject.toml  train.sh
docs/: reward.md
scripts/: convert_motion.py  train_local.py
src/adam_pro_tasks/: __init__.py
src/adam_pro_tasks/robots/: __init__.py
src/adam_pro_tasks/robots/adam_pro/: __init__.py  adam_pro_29_constants.py
src/adam_pro_tasks/robots/adam_pro/xmls/: adam_pro_29dof.xml
src/adam_pro_tasks/tasks/: __init__.py
src/adam_pro_tasks/tasks/tracking/: __init__.py  env_cfgs.py  motion_io.py  rl_cfg.py
src/adam_pro_tasks/tasks/velocity/: __init__.py  env_cfgs.py  rl_cfg.py
tests/: test_motion_npz_contract.py  test_registration.py  test_tracking_cfg_contract.py  test_train_local_script.py  test_velocity_cfg_contract.py  test_wandb_defaults.py
