[project]
name = "adam-pro-tasks"
version = "0.1.0"
description = "Adam Pro velocity and tracking tasks for mjlab"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "mjlab==1.1.1",
]

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[project.entry-points."mjlab.tasks"]
adam_pro_tasks = "adam_pro_tasks"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.14.14",
]

[tool.ruff]
indent-width = 2
src = ["src"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B"]

[tool.uv]
prerelease = "allow"
required-environments = [
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com/"
explicit = true

[[tool.uv.index]]
name = "mujoco"
url = "https://py.mujoco.org"
explicit = true

[tool.uv.sources]
mujoco = { index = "mujoco" }
warp-lang = { index = "nvidia", marker = "sys_platform != 'darwin'" }
